--- a/index.html
+++ b/index.html
@@ -100,13 +100,12 @@
 <!--><!-->
 		<h2>Update hotel's data: </h2>
 		<p id="postt">Select <pre id="post">PUT</pre> in Postman and then write the URL following this structure: </p>
-		<pre id="ejemplo">/sa</pre>
+		<pre id="ejemplo">//hotel/update/[id del hotel]</pre>
 		<p>Sample URL:</p>
-		<p id="ejemplo">http://localhost/API/</p>
+		<p id="ejemplo">http://localhost/API/15</p>
 		<p>And then add the different variables to be used: </p>
 		<ul>
 			<li>type: <p style="display: inline; color: black">Hotel type</p></li>
-			<li>rooms: <p style="display: inline; color: black">Number of rooms</p></li>
 			<li>phone: <p style="display: inline; color: black">Hotel's phone number</p></li>
 			<li>website: <p style="display: inline; color: black">Hotel's website link</p></li>
 			<li>email: <p style="display: inline; color: black">Hotel's email</p></li>
