--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 		<p id="ejemplo">http://localhost/API/hotel/add</p>
 		<p>And then add the different variables to be used: </p>
 		<ul>
+			<li>key: <p style="display: inline; color: black">API key</p></li>
 			<li>name: <p style="display: inline; color: black">Hotel's name</p></li>
 			<li>address: <p style="display: inline; color: black">Hotel's address</p></li>
 			<li>state: <p style="display: inline; color: black">State where the hotel is placed</p></li>
@@ -105,6 +106,7 @@
 		<p id="ejemplo">http://localhost/API/15</p>
 		<p>And then add the different variables to be used: </p>
 		<ul>
+			<li>key: <p style="display: inline; color: black">API key</p></li>
 			<li>type: <p style="display: inline; color: black">Hotel type</p></li>
 			<li>phone: <p style="display: inline; color: black">Hotel's phone number</p></li>
 			<li>website: <p style="display: inline; color: black">Hotel's website link</p></li>
